fix: add scrollbar by subtasks

--- a/styles/task_form.css
+++ b/styles/task_form.css
@@ -235,6 +235,9 @@ button.input_field{
     gap: 8px;
     list-style-position: inside;
     padding: 0;
+    max-height: 200px;
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .subtask_bulletpoint{
@@ -248,6 +251,8 @@ button.input_field{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    min-height: fit-content;
 }
 
 .subtask_bulletpoint::before {
@@ -449,4 +454,39 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 100%;
     flex: 1;
     justify-content: space-between;
+}
+
+
+/* Scrollbar */
+
+::-webkit-scrollbar {
+    width: 9px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #A8A8A8;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #626262;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-button:single-button {
+    display: block;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+    background-image: url("../assets/img/icons/scrollbar/button_up.svg");
+}
+
+::-webkit-scrollbar-button:single-button:vertical:increment {
+    background-image: url("../assets/img/icons/scrollbar/button_down.svg");
 }
